--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -4,36 +4,41 @@
   list-style-type: none;
   text-decoration: none;
 }
-body{
+
+body {
   overflow-x: hidden;
   background: @dark-green;
 }
+
 .wrapper {
   width: 100%;
   margin: 0 auto;
 
 }
-.index .wrap-1200{
+
+.index .wrap-1200 {
   background: none;
   box-shadow: none !important;
 }
+
 .wrap-1200 {
   max-width: 1200px;
   margin: 0 auto;
   background: #ffffff;
   box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
-  &:last-child{
+  &:last-child {
     box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
-  &:nth-child(2){
+  &:nth-child(2) {
     box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
 }
-.footer .wrap-1200{
+
+.footer .wrap-1200 {
   box-shadow: none !important;
 }
 
@@ -56,118 +61,83 @@ body{
 
 //========================================
 .unlimite-int {
-  background: url(../img/lightness.PNG) no-repeat top center, @dark-green;
-  box-shadow: 5px 0px 50px rgba(51, 102, 51, 0.50) inset;
+  background: #3f3f3f;
+  padding-bottom: 40px;
+  //box-shadow: 5px 0px 50px rgba(51, 102, 51, 0.50) inset;
   h1.title {
     color: #ffffff;
-    font-size: 60px;
+    font-size: 36px;
     font-family: @UbuntuBold;
     text-align: center;
-    max-width: 745px;
+    max-width: 500px;
     margin: 0 auto;
-    padding-top: 60px;
-    line-height: 73px;
-    text-shadow: 0px 20px 25px rgba(0, 102, 0, 0.8);
+    padding-top: 50px;
+    line-height: 1.2em;
+    //text-shadow: 0px 20px 25px rgba(0, 102, 0, 0.8);
   }
   p.sub-title {
     color: #ffffff;
-    padding-left: 22px;
+
     padding-top: 2px;
     font-family: @Ubuntu;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 30px;
     text-align: center;
     max-width: 370px;
-    margin: 0 auto;
-    margin-top: 55px;
+    margin: 35px auto 0;
+    .orange{
+      background-image: linear-gradient(to right,#3f3f3f 50%,#ffcc00 50%);
+      padding: 0 5px 2px;
+      color: #000000;
+
+      transition: background-position 1s;
+      background-size: 200% 100%;
+      &.active{
+        color: #000000;
+        transition: all 0.5s linear;
+        background-position: -100% 0;
+
+      }
+    }
   }
-
-  li.plus-item {
-    display: inline-block;
-    position: relative;
-    opacity: 0;
-    transition: all 1s;
-    .wrap {
-      position: relative;
-    }
-    &:hover {
-      transform: translateY(-20px);
-      transition: all 1s;
-    }
-    &.modem {
-      top: -165px;
-      left: 134px;
-      .absolute{
-        position: absolute;
-        transition: all 0.5s;
-        &.item-1{
-          top:0;
-          transform: scale(0);
-
+  .plus-list {
+    padding-top: 50px;
+    .list {
+      display: flex;
+      justify-content: center;
+      li.plus-item {
+        margin: 0 30px;
+        display: flex;
+        flex-direction: column;
+        .wrap{
+          padding-bottom: 22px;
+          text-align: center;
+          img{
+            transform:scale(0) ;
+            opacity: 0.00001;
+            will-change: transform, opacity;
+            transition: all 0.5s linear;
+            &.animated{
+              transform: scale(1);
+              will-change: transform, opacity;
+              opacity: 1;
+              transition: all 0.5s linear;
+            }
+          }
         }
-      }
-      p.plus-text {
-        color: #ffffff;
-        font-size: 20px;
-        font-family: @Ubuntu;
-        position: relative;
-        max-width: 160px;
-        line-height: 30px;
-        top: -10px;
-        left: 105px;
-      }
-    }
-    &.wifi {
-      top: 43px;
-      left: 235px;
-
-      .wifi-1 {
-        position: absolute;
-        top: 50px;
-        left: 8px;
-        path {
-          fill: #ffffff !important;
+        .plus-text{
+          opacity: 0.0001;
+          transition: opacity 1s linear;
+          font-family: @UbuntuBold;
+          color: #ffffff;
+          max-width: 200px;
+          text-align: center;
+          line-height: 1.5em;
+          &.animated{
+            opacity: 1;
+            transition: opacity 1s linear;
+          }
         }
-        .wifi {
-          opacity: 0;
-        }
-      }
-      p.plus-text {
-        color: #ffffff;
-        font-size: 20px;
-        font-family: @Ubuntu;
-        top: -110px;
-        position: relative;
-        max-width: 160px;
-        line-height: 30px;
-        left: 225px;
-      }
-    }
-    &.media {
-      top: -220px;
-      left: 366px;
-      .absolute{
-        position: absolute;
-        transition: all 0.5s;
-        &.item-1{
-          top: -10px;
-          transform: scale(0);
-          ;
-        }
-        &.item-2{
-          top: -20px;
-          transform: scale(0);
-        }
-      }
-      p.plus-text {
-        color: #ffffff;
-        font-size: 20px;
-        font-family: @Ubuntu;
-        top: -15px;
-        line-height: 30px;
-        position: relative;
-        max-width: 161px;
-        left: 95px;
       }
     }
   }
@@ -175,30 +145,30 @@ body{
 }
 
 .tarifs {
-  padding-bottom: 80px;
+  padding-bottom: 45px;
   background: #ffffff;
   h2.title-gray {
     text-align: center;
-    font-size: 60px;
+    font-size: 36px;
     font-family: @UbuntuBold;
-    padding-top: 60px;
+    padding-top: 30px;
     color: #333333;
   }
   p.sub-title-gray {
     text-align: center;
     font-size: 16px;
     font-family: @Ubuntu;
-    padding-top: 20px;
+    padding-top: 10px;
     color: #999999;
   }
   .grid {
     justify-content: space-between;
     display: flex;
-    padding: 50px 100px 0;
+    padding: 10px 100px 0;
     .col-title {
-      font-size: 34px;
+      font-size: 22px;
       font-family: @UbuntuBold;
-      padding-top: 20px;
+      padding-top: 30px;
       padding-bottom: 32px;
       color: #333333;
     }
@@ -210,7 +180,7 @@ body{
       }
       .hover-block {
         min-width: 210px;
-        min-height: 300px;
+        min-height: 210px;
         box-sizing: border-box;
         border-radius: 16px;
 
@@ -260,7 +230,7 @@ body{
         }
         p.tarif-name {
           &[data-mb="75"] {
-            font-size: 72px;
+            font-size: 60px;
           }
           font-family: @UbuntuBold;
           font-size: 60px;
@@ -268,10 +238,10 @@ body{
           padding-top: 5px;
 
           span.text {
-            font-size: 24px;
-            position: relative;
-            top: 32px;
-            left: -30px;
+            font-size: 20px;
+            position: absolute;
+            top: 75px;
+            left: 20px;
           }
 
         }
@@ -279,7 +249,7 @@ body{
     }
     .big-block {
       .hover-block {
-        min-height: 250px;
+        min-height: 210px;
         min-width: 250px;
         box-sizing: border-box;
         border-radius: 16px;
@@ -316,13 +286,13 @@ body{
         }
 
         p.tarif-name {
-          &[data-mb="100"]{
-            font-size: 96px;
+          &[data-mb="100"] {
+            font-size: 60px;
             span.text {
               font-size: 24px;
-              position: relative;
-              top: 32px;
-              left: -70px;
+              position: absolute;
+              top: 75px;
+              left: 25px;
             }
           }
           font-family: @UbuntuBold;
@@ -331,10 +301,10 @@ body{
           padding-top: 5px;
 
           span.text {
-            font-size: 24px;
-            position: relative;
-            top: 32px;
-            left: -30px;
+            font-size: 20px;
+            position: absolute;
+            top: 75px;
+            left: 20px;
           }
 
         }
@@ -373,8 +343,26 @@ p.button-row {
   .speed-block {
     display: flex;
     justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 55px;
+    h2.title {
+      color: #ffffff;
+      font-size: 24px;
+      font-family: @UbuntuBold;
+      font-weight: normal;
+      padding-top: 38px;
+      padding-bottom: 0px;
+    }
+    p.sub-title {
+      color: #999999;
+      font-family: @Ubuntu;
+      max-width: 450px;
+      font-size: 16px;
+      display: inline-block;
+      padding-top: 0px;
+      line-height: 1.5em;
+    }
+
     .col-1-2 {
       &:first-child {
         padding-left: 20px;
@@ -385,48 +373,31 @@ p.button-row {
         margin-left: 16px;
       }
     }
-    p.sub-title {
-      color: #999999;
-      font-family: @Ubuntu;
-      max-width: 450px;
-      font-size: 20px;
-      display: inline-block;
-      padding-top: 0px;
-      line-height: 30px;
-    }
-    h2.title {
-      color: #ffffff;
-      font-size: 32px;
-      font-family: @UbuntuBold;
-      font-weight: normal;
-      padding-top: 38px;
-      padding-bottom: 20px;
-    }
+
   }
 }
 
 .individual-tarif {
   position: relative;
   background: @dark-green;
-  max-height: 883px;
+  max-height: 620px;
   .wrap-1200 {
-    background: url(../img/wifi-ind.png) no-repeat center 230px;
+    background: url(../img/wifi-ind.png) no-repeat center 160px;
     padding-bottom: 155px;
     position: relative;
     z-index: 5;
 
-
     h2.title {
       color: #ffffff;
-      font-size: 60px;
+      font-size: 36px;
       text-align: center;
-      padding-top: 60px;
+      padding-top: 40px;
       font-family: @UbuntuBold;
     }
     p.sub-title {
       color: #ffffff;
       font-family: @Ubuntu;
-      font-size: 20px;
+      font-size: 16px;
       max-width: 590px;
       text-align: center;
       margin: 0 auto;
@@ -435,52 +406,52 @@ p.button-row {
     }
     .application {
       max-width: 460px;
-      margin: 55px auto 0;
+      margin: 25px auto 0;
       padding: 30px 70px 20px;
       box-sizing: border-box;
       border-radius: 20px;
       position: relative;
       z-index: 5;
-      background: url(../img/ind-back.PNG) no-repeat 10px 15px, #ffffff;
+      background: url(../img/ind-back.PNG) no-repeat 10px -105px, #ffffff;
       h3.title {
         font-family: @UbuntuBold;
-        font-size: 36px;
+        font-size: 24px;
         padding-top: 10px;
         color: #333333;
-        padding-bottom: 40px;
+        padding-bottom: 30px;
       }
       .row {
-        padding-bottom: 25px;
+        padding-bottom: 15px;
         position: relative;
         .row-name {
           display: block;
           font-family: @Ubuntu;
           color: #333333;
-          font-size: 20px;
+          font-size: 16px;
           padding-bottom: 6px;
         }
         .popup-field {
           width: 100%;
           box-sizing: border-box;
-          padding: 12px 10px 12px 10px;
+          padding: 8px 10px 12px 10px;
           border-radius: 5px;
           border: 1px solid #cccccc;
-          font-size: 20px;
+          font-size: 16px;
           font-weight: normal;
           font-family: @Ubuntu;
-          &::-moz-placeholder{
+          &::-moz-placeholder {
             color: #cccccc;
             font-family: @Ubuntu;
             font-weight: normal;
             font-size: 1px;
           }
-          &::-webkit-input-placeholder{
+          &::-webkit-input-placeholder {
             color: #cccccc;
             font-family: @Ubuntu;
             font-weight: normal;
 
           }
-          &:-ms-input-placeholder{
+          &:-ms-input-placeholder {
             color: #cccccc;
             font-family: @Ubuntu;
             font-weight: normal;
@@ -492,8 +463,8 @@ p.button-row {
             outline: none;
             border: 1px solid @dark-green;
           }
-          &.error{
-            border:1px solid red;
+          &.error {
+            border: 1px solid red;
           }
         }
         .map-button {
@@ -504,9 +475,9 @@ p.button-row {
           font-size: 12px;
           text-decoration: underline;
           color: @link-color;
-          top: 40px;
-          &:hover{
-            color:#006939 ;
+          top: 30px;
+          &:hover {
+            color: #006939;
 
             cursor: pointer;
           }
@@ -587,15 +558,15 @@ ul.icons-list {
   background: @dark-green;
   padding-bottom: 100px;
   padding-top: 180px;
-  .wrap-1200{
+  .wrap-1200 {
   }
   .title {
-    padding-top: 60px;
-    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 0px;
     text-align: center;
     font-family: @UbuntuBold;
     color: #333333;
-    font-size: 60px;
+    font-size: 36px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background: #ffffff;
@@ -608,47 +579,53 @@ ul.icons-list {
     padding-bottom: 60px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-
+    margin-top: -10px;
   }
 }
 
 li.comment-item {
-  max-width: 320px;
+  max-width: 280px;
   position: relative;
   .about-commentator {
     display: flex;
     vertical-align: top;
     .image {
-      padding-right: 17px;
+      padding-right: 20px;
+      padding-left: 25px;
       padding-top: 7px;
     }
 
     .commentator {
-      padding-top: 53px;
-      max-width: 270px;
+      padding-top: 43px;
+      max-width: 300px;
+      padding-bottom: 30px;
       p.name {
-        font-size: 24px;
+        position: absolute;
+        width: 100%;
+        font-size: 18px;
         font-family: @UbuntuBold;
         color: #333333;
       }
       p.prof {
-        font-family: Ubuntu;
+        font-family: @Ubuntu;
         color: #999999;
-        padding-top: 10px;
-        max-width: 170px;
+        padding-top: 20px;
+        font-size: 14px;
+        position: absolute;
+        width: 200px;
         line-height: 22px;
       }
     }
   }
   .comment {
     font-family: Ubuntu;
-    font-size: 16px;
+    font-size: 14px;
     padding: 30px;
     background: #f3f3d7;
     border-radius: 20px;
     max-width: 320px;
     box-sizing: border-box;
-    top: -20px;
+    top: -30px;
     position: relative;
     &:before {
       content: "";
@@ -662,47 +639,34 @@ li.comment-item {
     }
     p {
       color: #333333;
-      font-size: 16px;
-      line-height: 24px;
-      padding-bottom: 20px;
-      &:last-child{
+      font-size: 14px;
+      line-height: 1.5em;
+      padding-bottom: 10px;
+      font-family: @Ubuntu;
+      &:last-child {
         padding-bottom: 0;
       }
     }
-  }
-  span.comment-speed {
-    position: absolute;
-    background: url(../img/speed.PNG) no-repeat;
-    font-size: 46px;
-    color: #ffffff;
-    padding-top: 5px;
-    font-family: @UbuntuBold;
-    text-align: center;
-    width: 134px;
-    height: 96px;
-    top: 154px;
-    right: -65px;
-    i.small {
+    strong{
+      font-family: @UbuntuBold;
+      color: #333333;
       font-size: 14px;
-      position: relative;
-      top: -5px;
-      display: block;
-      font-style: normal;
+      line-height: 1.5em;
     }
   }
 }
 
 .col-1-2--first {
   li.comment-item:first-child {
-    left: -120px;
+    left: -20px;
   }
   li.comment-item:last-child {
-    left: -55px;
+    left: -20px;
   }
 }
 
 .col-1-2--last {
-  padding-top: 150px;
+  padding-top: 95px;
   ul.comment-list {
     display: flex;
     flex-direction: column;
