--- a/public/css/less/include/header.less
+++ b/public/css/less/include/header.less
@@ -15,12 +15,12 @@ and (min-resolution: .001dpcm) {
 
 header.page-head{
   &.index-page {
-    box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
+    //box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
     margin-left: 61px;
     padding-left: 0;
     background: transparent;
     nav.main-menu{
-      box-shadow: 0 15px 35px 15px rgba(0, 86, 0, 0.25);
+      //box-shadow: 0 15px 35px 15px rgba(0, 86, 0, 0.25);
     }
   }
   display: flex;
