--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,134 +70,102 @@ body {
   display: none;
 }
 .unlimite-int {
-  background: url(../img/lightness.PNG) no-repeat top center, #379d47;
-  box-shadow: 5px 0px 50px rgba(51, 102, 51, 0.5) inset;
+  background: #3f3f3f;
+  padding-bottom: 40px;
 }
 .unlimite-int h1.title {
   color: #ffffff;
-  font-size: 60px;
+  font-size: 36px;
   font-family: UbuntuBold;
   text-align: center;
-  max-width: 745px;
+  max-width: 500px;
   margin: 0 auto;
-  padding-top: 60px;
-  line-height: 73px;
-  text-shadow: 0px 20px 25px rgba(0, 102, 0, 0.8);
+  padding-top: 50px;
+  line-height: 1.2em;
 }
 .unlimite-int p.sub-title {
   color: #ffffff;
-  padding-left: 22px;
   padding-top: 2px;
   font-family: Ubuntu;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 30px;
   text-align: center;
   max-width: 370px;
-  margin: 0 auto;
-  margin-top: 55px;
+  margin: 35px auto 0;
 }
-.unlimite-int li.plus-item {
-  display: inline-block;
-  position: relative;
-  opacity: 0;
-  transition: all 1s;
+.unlimite-int p.sub-title .orange {
+  background-image: linear-gradient(to right, #3f3f3f 50%, #ffcc00 50%);
+  padding: 0 5px 2px;
+  color: #000000;
+  transition: background-position 1s;
+  background-size: 200% 100%;
 }
-.unlimite-int li.plus-item .wrap {
-  position: relative;
+.unlimite-int p.sub-title .orange.active {
+  color: #000000;
+  transition: all 0.5s linear;
+  background-position: -100% 0;
 }
-.unlimite-int li.plus-item:hover {
-  transform: translateY(-20px);
-  transition: all 1s;
+.unlimite-int .plus-list {
+  padding-top: 50px;
 }
-.unlimite-int li.plus-item.modem {
-  top: -165px;
-  left: 134px;
+.unlimite-int .plus-list .list {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
 }
-.unlimite-int li.plus-item.modem .absolute {
-  position: absolute;
-  transition: all 0.5s;
+.unlimite-int .plus-list .list li.plus-item {
+  margin: 0 30px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
 }
-.unlimite-int li.plus-item.modem .absolute.item-1 {
-  top: 0;
+.unlimite-int .plus-list .list li.plus-item .wrap {
+  padding-bottom: 22px;
+  text-align: center;
+}
+.unlimite-int .plus-list .list li.plus-item .wrap img {
   transform: scale(0);
+  opacity: 0.00001;
+  will-change: transform, opacity;
+  transition: all 0.5s linear;
 }
-.unlimite-int li.plus-item.modem p.plus-text {
+.unlimite-int .plus-list .list li.plus-item .wrap img.animated {
+  transform: scale(1);
+  will-change: transform, opacity;
+  opacity: 1;
+  transition: all 0.5s linear;
+}
+.unlimite-int .plus-list .list li.plus-item .plus-text {
+  opacity: 0.0001;
+  transition: opacity 1s linear;
+  font-family: UbuntuBold;
   color: #ffffff;
-  font-size: 20px;
-  font-family: Ubuntu;
-  position: relative;
-  max-width: 160px;
-  line-height: 30px;
-  top: -10px;
-  left: 105px;
+  max-width: 200px;
+  text-align: center;
+  line-height: 1.5em;
 }
-.unlimite-int li.plus-item.wifi {
-  top: 43px;
-  left: 235px;
-}
-.unlimite-int li.plus-item.wifi .wifi-1 {
-  position: absolute;
-  top: 50px;
-  left: 8px;
-}
-.unlimite-int li.plus-item.wifi .wifi-1 path {
-  fill: #ffffff !important;
-}
-.unlimite-int li.plus-item.wifi .wifi-1 .wifi {
-  opacity: 0;
-}
-.unlimite-int li.plus-item.wifi p.plus-text {
-  color: #ffffff;
-  font-size: 20px;
-  font-family: Ubuntu;
-  top: -110px;
-  position: relative;
-  max-width: 160px;
-  line-height: 30px;
-  left: 225px;
-}
-.unlimite-int li.plus-item.media {
-  top: -220px;
-  left: 366px;
-}
-.unlimite-int li.plus-item.media .absolute {
-  position: absolute;
-  transition: all 0.5s;
-}
-.unlimite-int li.plus-item.media .absolute.item-1 {
-  top: -10px;
-  transform: scale(0);
-}
-.unlimite-int li.plus-item.media .absolute.item-2 {
-  top: -20px;
-  transform: scale(0);
-}
-.unlimite-int li.plus-item.media p.plus-text {
-  color: #ffffff;
-  font-size: 20px;
-  font-family: Ubuntu;
-  top: -15px;
-  line-height: 30px;
-  position: relative;
-  max-width: 161px;
-  left: 95px;
+.unlimite-int .plus-list .list li.plus-item .plus-text.animated {
+  opacity: 1;
+  transition: opacity 1s linear;
 }
 .tarifs {
-  padding-bottom: 80px;
+  padding-bottom: 45px;
   background: #ffffff;
 }
 .tarifs h2.title-gray {
   text-align: center;
-  font-size: 60px;
+  font-size: 36px;
   font-family: UbuntuBold;
-  padding-top: 60px;
+  padding-top: 30px;
   color: #333333;
 }
 .tarifs p.sub-title-gray {
   text-align: center;
   font-size: 16px;
   font-family: Ubuntu;
-  padding-top: 20px;
+  padding-top: 10px;
   color: #999999;
 }
 .tarifs .grid {
@@ -205,12 +173,12 @@ body {
       justify-content: space-between;
   display: -ms-flexbox;
   display: flex;
-  padding: 50px 100px 0;
+  padding: 10px 100px 0;
 }
 .tarifs .grid .col-title {
-  font-size: 34px;
+  font-size: 22px;
   font-family: UbuntuBold;
-  padding-top: 20px;
+  padding-top: 30px;
   padding-bottom: 32px;
   color: #333333;
 }
@@ -224,7 +192,7 @@ body {
 }
 .tarifs .grid .block-2 .hover-block {
   min-width: 210px;
-  min-height: 300px;
+  min-height: 210px;
   box-sizing: border-box;
   border-radius: 16px;
   display: -ms-flexbox;
@@ -281,16 +249,16 @@ body {
   padding-top: 5px;
 }
 .tarifs .grid .block-2 .hover-block p.tarif-name[data-mb="75"] {
-  font-size: 72px;
+  font-size: 60px;
 }
 .tarifs .grid .block-2 .hover-block p.tarif-name span.text {
-  font-size: 24px;
-  position: relative;
-  top: 32px;
-  left: -30px;
+  font-size: 20px;
+  position: absolute;
+  top: 75px;
+  left: 20px;
 }
 .tarifs .grid .big-block .hover-block {
-  min-height: 250px;
+  min-height: 210px;
   min-width: 250px;
   box-sizing: border-box;
   border-radius: 16px;
@@ -336,19 +304,19 @@ body {
   padding-top: 5px;
 }
 .tarifs .grid .big-block .hover-block p.tarif-name[data-mb="100"] {
-  font-size: 96px;
+  font-size: 60px;
 }
 .tarifs .grid .big-block .hover-block p.tarif-name[data-mb="100"] span.text {
   font-size: 24px;
-  position: relative;
-  top: 32px;
-  left: -70px;
+  position: absolute;
+  top: 75px;
+  left: 25px;
 }
 .tarifs .grid .big-block .hover-block p.tarif-name span.text {
-  font-size: 24px;
-  position: relative;
-  top: 32px;
-  left: -30px;
+  font-size: 20px;
+  position: absolute;
+  top: 75px;
+  left: 20px;
 }
 p.button-row button.connect {
   color: #333333;
@@ -375,8 +343,25 @@ p.button-row button.connect:hover {
   display: flex;
   -ms-flex-pack: center;
       justify-content: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 55px;
+}
+.dont-speed-down .speed-block h2.title {
+  color: #ffffff;
+  font-size: 24px;
+  font-family: UbuntuBold;
+  font-weight: normal;
+  padding-top: 38px;
+  padding-bottom: 0px;
+}
+.dont-speed-down .speed-block p.sub-title {
+  color: #999999;
+  font-family: Ubuntu;
+  max-width: 450px;
+  font-size: 16px;
+  display: inline-block;
+  padding-top: 0px;
+  line-height: 1.5em;
 }
 .dont-speed-down .speed-block .col-1-2:first-child {
   padding-left: 20px;
@@ -386,45 +371,28 @@ p.button-row button.connect:hover {
   padding-left: 0px;
   margin-left: 16px;
 }
-.dont-speed-down .speed-block p.sub-title {
-  color: #999999;
-  font-family: Ubuntu;
-  max-width: 450px;
-  font-size: 20px;
-  display: inline-block;
-  padding-top: 0px;
-  line-height: 30px;
-}
-.dont-speed-down .speed-block h2.title {
-  color: #ffffff;
-  font-size: 32px;
-  font-family: UbuntuBold;
-  font-weight: normal;
-  padding-top: 38px;
-  padding-bottom: 20px;
-}
 .individual-tarif {
   position: relative;
   background: #379d47;
-  max-height: 883px;
+  max-height: 620px;
 }
 .individual-tarif .wrap-1200 {
-  background: url(../img/wifi-ind.png) no-repeat center 230px;
+  background: url(../img/wifi-ind.png) no-repeat center 160px;
   padding-bottom: 155px;
   position: relative;
   z-index: 5;
 }
 .individual-tarif .wrap-1200 h2.title {
   color: #ffffff;
-  font-size: 60px;
+  font-size: 36px;
   text-align: center;
-  padding-top: 60px;
+  padding-top: 40px;
   font-family: UbuntuBold;
 }
 .individual-tarif .wrap-1200 p.sub-title {
   color: #ffffff;
   font-family: Ubuntu;
-  font-size: 20px;
+  font-size: 16px;
   max-width: 590px;
   text-align: center;
   margin: 0 auto;
@@ -433,39 +401,39 @@ p.button-row button.connect:hover {
 }
 .individual-tarif .wrap-1200 .application {
   max-width: 460px;
-  margin: 55px auto 0;
+  margin: 25px auto 0;
   padding: 30px 70px 20px;
   box-sizing: border-box;
   border-radius: 20px;
   position: relative;
   z-index: 5;
-  background: url(../img/ind-back.PNG) no-repeat 10px 15px, #ffffff;
+  background: url(../img/ind-back.PNG) no-repeat 10px -105px, #ffffff;
 }
 .individual-tarif .wrap-1200 .application h3.title {
   font-family: UbuntuBold;
-  font-size: 36px;
+  font-size: 24px;
   padding-top: 10px;
   color: #333333;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
 }
 .individual-tarif .wrap-1200 .application .row {
-  padding-bottom: 25px;
+  padding-bottom: 15px;
   position: relative;
 }
 .individual-tarif .wrap-1200 .application .row .row-name {
   display: block;
   font-family: Ubuntu;
   color: #333333;
-  font-size: 20px;
+  font-size: 16px;
   padding-bottom: 6px;
 }
 .individual-tarif .wrap-1200 .application .row .popup-field {
   width: 100%;
   box-sizing: border-box;
-  padding: 12px 10px 12px 10px;
+  padding: 8px 10px 12px 10px;
   border-radius: 5px;
   border: 1px solid #cccccc;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: normal;
   font-family: Ubuntu;
 }
@@ -504,10 +472,10 @@ p.button-row button.connect:hover {
   font-size: 12px;
   text-decoration: underline;
   color: #39a651;
-  top: 40px;
+  top: 30px;
 }
 .individual-tarif .wrap-1200 .application .row .map-button:hover {
-  color: #006939 ;
+  color: #006939;
   cursor: pointer;
 }
 .individual-tarif .wrap-1200 .application .row.button {
@@ -578,12 +546,12 @@ ul.icons-list li.icon.play-ic {
   padding-top: 180px;
 }
 .comments-block .title {
-  padding-top: 60px;
-  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 0px;
   text-align: center;
   font-family: UbuntuBold;
   color: #333333;
-  font-size: 60px;
+  font-size: 36px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   background: #ffffff;
@@ -597,9 +565,10 @@ ul.icons-list li.icon.play-ic {
   padding-bottom: 60px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  margin-top: -10px;
 }
 li.comment-item {
-  max-width: 320px;
+  max-width: 280px;
   position: relative;
 }
 li.comment-item .about-commentator {
@@ -608,34 +577,40 @@ li.comment-item .about-commentator {
   vertical-align: top;
 }
 li.comment-item .about-commentator .image {
-  padding-right: 17px;
+  padding-right: 20px;
+  padding-left: 25px;
   padding-top: 7px;
 }
 li.comment-item .about-commentator .commentator {
-  padding-top: 53px;
-  max-width: 270px;
+  padding-top: 43px;
+  max-width: 300px;
+  padding-bottom: 30px;
 }
 li.comment-item .about-commentator .commentator p.name {
-  font-size: 24px;
+  position: absolute;
+  width: 100%;
+  font-size: 18px;
   font-family: UbuntuBold;
   color: #333333;
 }
 li.comment-item .about-commentator .commentator p.prof {
   font-family: Ubuntu;
   color: #999999;
-  padding-top: 10px;
-  max-width: 170px;
+  padding-top: 20px;
+  font-size: 14px;
+  position: absolute;
+  width: 200px;
   line-height: 22px;
 }
 li.comment-item .comment {
   font-family: Ubuntu;
-  font-size: 16px;
+  font-size: 14px;
   padding: 30px;
   background: #f3f3d7;
   border-radius: 20px;
   max-width: 320px;
   box-sizing: border-box;
-  top: -20px;
+  top: -30px;
   position: relative;
 }
 li.comment-item .comment:before {
@@ -650,41 +625,28 @@ li.comment-item .comment:before {
 }
 li.comment-item .comment p {
   color: #333333;
-  font-size: 16px;
-  line-height: 24px;
-  padding-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.5em;
+  padding-bottom: 10px;
+  font-family: Ubuntu;
 }
 li.comment-item .comment p:last-child {
   padding-bottom: 0;
 }
-li.comment-item span.comment-speed {
-  position: absolute;
-  background: url(../img/speed.PNG) no-repeat;
-  font-size: 46px;
-  color: #ffffff;
-  padding-top: 5px;
+li.comment-item .comment strong {
   font-family: UbuntuBold;
-  text-align: center;
-  width: 134px;
-  height: 96px;
-  top: 154px;
-  right: -65px;
-}
-li.comment-item span.comment-speed i.small {
+  color: #333333;
   font-size: 14px;
-  position: relative;
-  top: -5px;
-  display: block;
-  font-style: normal;
+  line-height: 1.5em;
 }
 .col-1-2--first li.comment-item:first-child {
-  left: -120px;
+  left: -20px;
 }
 .col-1-2--first li.comment-item:last-child {
-  left: -55px;
+  left: -20px;
 }
 .col-1-2--last {
-  padding-top: 150px;
+  padding-top: 95px;
 }
 .col-1-2--last ul.comment-list {
   display: -ms-flexbox;
@@ -1771,13 +1733,9 @@ header.page-head {
   background: #FFFFFF;
 }
 header.page-head.index-page {
-  box-shadow: 0 -35px 55px 25px rgba(0, 86, 0, 0.25);
   margin-left: 61px;
   padding-left: 0;
   background: transparent;
-}
-header.page-head.index-page nav.main-menu {
-  box-shadow: 0 15px 35px 15px rgba(0, 86, 0, 0.25);
 }
 header.page-head .info-row {
   display: -ms-flexbox;
