--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -79,7 +79,7 @@ body {
     color: #ffffff;
 
     padding-top: 2px;
-    font-family: @Ubuntu;
+    font-family: @UbuntuBold;
     font-size: 18px;
     line-height: 30px;
     text-align: center;
@@ -130,6 +130,7 @@ body {
           transition: opacity 1s linear;
           font-family: @UbuntuBold;
           color: #ffffff;
+          font-size:18px;
           max-width: 200px;
           text-align: center;
           line-height: 1.5em;
@@ -189,27 +190,27 @@ body {
         justify-content: space-between;
         position: relative;
         &.t1 {
-          background: url(../img/t1-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
+          background: url(../img/t1-s.png) no-repeat center ~"calc(100% + 27px)", #f2f2f2;
           &:hover {
-            background: url(../img/t1-s-h.png) no-repeat center calc(100% + 28px), #00933d;
+            background: url(../img/t1-s-h.png) no-repeat center  ~"calc(100% + 27px)", #00933d;
           }
         }
         &.t2 {
-          background: url(../img/t2-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
+          background: url(../img/t2-s.png) no-repeat center  ~"calc(100% + 27px)", #f2f2f2;
           &:hover {
-            background: url(../img/t2-s-h.png) no-repeat center calc(100% + 28px), #00933d;
+            background: url(../img/t2-s-h.png) no-repeat center  ~"calc(100% + 27px)", #00933d;
           }
         }
         &.t3 {
-          background: url(../img/t3-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
+          background: url(../img/t3-s.png) no-repeat center  ~"calc(100% + 27px)", #f2f2f2;
           &:hover {
-            background: url(../img/t3-s-h.png) no-repeat center calc(100% + 28px), #00933d;
+            background: url(../img/t3-s-h.png) no-repeat center  ~"calc(100% + 27px)", #00933d;
           }
         }
         &.t4 {
-          background: url(../img/t4-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
+          background: url(../img/t4-s.png) no-repeat center  ~"calc(100% + 27px)", #f2f2f2;
           &:hover {
-            background: url(../img/t4-s-h.png) no-repeat center calc(100% + 28px), #00933d;
+            background: url(../img/t4-s-h.png) no-repeat center  ~"calc(100% + 27px)", #00933d;
           }
         }
 
