--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -368,6 +368,8 @@ p.button-row {
       &:first-child {
         padding-left: 20px;
         box-sizing: border-box;
+        height: 70px;
+        padding-top: 35px;
       }
       &:last-child {
         padding-left: 0px;
@@ -789,7 +791,37 @@ li.comment-item {
     }
   }
 }
+svg#arrow {
+  width: 100px;
+  height: 70px;
+}
 
+polygon#big-arrow {
+  width: 100px;
+  height: 100px;
+}
+
+polygon#small-arrow-2 {
+  transform: translateX(-85px);
+  transition: all 1s ease;
+  animation: Arrows 2s ;
+  animation-iteration-count: infinite;
+}
+polygon#small-arrow-1 {
+  transform: translateX(-85px);
+  transition: all 1s;
+  animation: Arrows 3s ;
+  animation-iteration-count: infinite;
+
+}
+@keyframes Arrows {
+  0%   {transform: translateY(-80px)}
+  100% {transform: translateY(100px)}
+}
+@keyframes Arrows-2 {
+  0%   {transform: translateY(-80px)}
+  100% {transform: translateY(100px)}
+}
 @import "pages/how-to-connect";
 @import "pages/tarfis";
 @import "pages/about";
