--- a/public/css/less/mobile/index.less
+++ b/public/css/less/mobile/index.less
@@ -18,7 +18,7 @@
         justify-content: center;
         flex-wrap: wrap;
         align-items: center;
-        padding-bottom: 40px;
+        padding-bottom: 0;
 
         p.plus-text {
           padding-left: 0;
@@ -74,7 +74,7 @@
     }
   }
   .comments-block .title {
-    padding-top: 150px;
+    padding-top:40px;
   }
 }
 
