--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -326,7 +326,7 @@
     -ms-flex-align: center;
         -ms-grid-row-align: center;
         align-items: center;
-    padding-bottom: 40px;
+    padding-bottom: 0;
   }
   .unlimite-int .list li.plus-item p.plus-text {
     padding-left: 0;
@@ -374,7 +374,7 @@
     padding-bottom: 30px;
   }
   .comments-block .title {
-    padding-top: 150px;
+    padding-top: 40px;
   }
 }
 @media screen and (max-width: 1100px) {
